roll back to previous params

--- a/jupyter_notebooks/Kalman Filter sensitivity.ipynb
+++ b/jupyter_notebooks/Kalman Filter sensitivity.ipynb
@@ -28,25 +28,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle r_{k} + \\frac{\\left(D_{k} p_{3|k} + p_{2|k} r_{k}\\right) \\left(- D_{k} r_{k} + z\\right)}{D_{k} \\left(D_{k} p_{3|k} + p_{2|k} r_{k}\\right) + n + q_{1} + r_{k} \\left(D_{k} p_{2|k} + p_{1|k} r_{k}\\right)}$"
+       "$\\displaystyle D_{k} r_{k} + \\frac{\\left(- D_{k} r_{k} + z\\right) \\left(D_{k} \\left(D_{k} p_{3|k} + p_{2|k} r_{k}\\right) + q_{1} + r_{k} \\left(D_{k} p_{2|k} + p_{1|k} r_{k}\\right)\\right)}{D_{k} \\left(D_{k} p_{3|k} + p_{2|k} r_{k}\\right) + n + q_{1} + r_{k} \\left(D_{k} p_{2|k} + p_{1|k} r_{k}\\right)}$"
       ],
       "text/plain": [
-       "r_{k} + (D_{k}*p_{3|k} + p_{2|k}*r_{k})*(-D_{k}*r_{k} + z)/(D_{k}*(D_{k}*p_{3|k} + p_{2|k}*r_{k}) + n + q_1 + r_{k}*(D_{k}*p_{2|k} + p_{1|k}*r_{k}))"
+       "D_{k}*r_{k} + (-D_{k}*r_{k} + z)*(D_{k}*(D_{k}*p_{3|k} + p_{2|k}*r_{k}) + q_1 + r_{k}*(D_{k}*p_{2|k} + p_{1|k}*r_{k}))/(D_{k}*(D_{k}*p_{3|k} + p_{2|k}*r_{k}) + n + q_1 + r_{k}*(D_{k}*p_{2|k} + p_{1|k}*r_{k}))"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "_X[1]"
+    "_X[0]"
    ]
   },
   {
