--- a/jupyter_notebooks/Kalman Filter sensitivity.ipynb
+++ b/jupyter_notebooks/Kalman Filter sensitivity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,42 +28,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle D_{k} r_{k} + \\frac{\\left(- D_{k} r_{k} + z\\right) \\left(D_{k} \\left(D_{k} p_{3|k} + p_{2|k} r_{k}\\right) + q_{1} + r_{k} \\left(D_{k} p_{2|k} + p_{1|k} r_{k}\\right)\\right)}{D_{k} \\left(D_{k} p_{3|k} + p_{2|k} r_{k}\\right) + n + q_{1} + r_{k} \\left(D_{k} p_{2|k} + p_{1|k} r_{k}\\right)}$"
+       "$\\displaystyle r_{k} + \\frac{\\left(D_{k} p_{3|k} + p_{2|k} r_{k}\\right) \\left(- D_{k} r_{k} + z\\right)}{D_{k} \\left(D_{k} p_{3|k} + p_{2|k} r_{k}\\right) + n + q_{1} + r_{k} \\left(D_{k} p_{2|k} + p_{1|k} r_{k}\\right)}$"
       ],
       "text/plain": [
-       "D_{k}*r_{k} + (-D_{k}*r_{k} + z)*(D_{k}*(D_{k}*p_{3|k} + p_{2|k}*r_{k}) + q_1 + r_{k}*(D_{k}*p_{2|k} + p_{1|k}*r_{k}))/(D_{k}*(D_{k}*p_{3|k} + p_{2|k}*r_{k}) + n + q_1 + r_{k}*(D_{k}*p_{2|k} + p_{1|k}*r_{k}))"
+       "r_{k} + (D_{k}*p_{3|k} + p_{2|k}*r_{k})*(-D_{k}*r_{k} + z)/(D_{k}*(D_{k}*p_{3|k} + p_{2|k}*r_{k}) + n + q_1 + r_{k}*(D_{k}*p_{2|k} + p_{1|k}*r_{k}))"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "_X[0]"
+    "_X[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle p_{3|k} + q_{3} - \\frac{\\left(D_{k} p_{3|k} + p_{2|k} r_{k}\\right)^{2}}{D_{k} \\left(D_{k} p_{3|k} + p_{2|k} r_{k}\\right) + n + q_{1} + r_{k} \\left(D_{k} p_{2|k} + p_{1|k} r_{k}\\right)}$"
+       "$\\displaystyle p_{3|k} + q_{3} - \\frac{\\left(D_{k} p_{3|k} + p_{2|k} r_{k}\\right)^{2}}{D_{k} \\left(D_{k} p_{3|k} + p_{2|k} r_{k}\\right) + n + r_{k} \\left(D_{k} p_{2|k} + p_{1|k} r_{k}\\right)}$"
       ],
       "text/plain": [
-       "p_{3|k} + q_3 - (D_{k}*p_{3|k} + p_{2|k}*r_{k})**2/(D_{k}*(D_{k}*p_{3|k} + p_{2|k}*r_{k}) + n + q_1 + r_{k}*(D_{k}*p_{2|k} + p_{1|k}*r_{k}))"
+       "p_{3|k} + q_3 - (D_{k}*p_{3|k} + p_{2|k}*r_{k})**2/(D_{k}*(D_{k}*p_{3|k} + p_{2|k}*r_{k}) + n + r_{k}*(D_{k}*p_{2|k} + p_{1|k}*r_{k}))"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
