working download button?

--- a/jupyter_notebooks/Kalman Filter sensitivity.ipynb
+++ b/jupyter_notebooks/Kalman Filter sensitivity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
        "r_{k} + (D_{k}*p_{3|k} + p_{2|k}*r_{k})*(-D_{k}*r_{k} + z)/(D_{k}*(D_{k}*p_{3|k} + p_{2|k}*r_{k}) + n + q_1 + r_{k}*(D_{k}*p_{2|k} + p_{1|k}*r_{k}))"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,30 +51,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle p_{3|k} + q_{3} - \\frac{\\left(D_{k} p_{3|k} + p_{2|k} r_{k}\\right)^{2}}{D_{k} \\left(D_{k} p_{3|k} + p_{2|k} r_{k}\\right) + n + r_{k} \\left(D_{k} p_{2|k} + p_{1|k} r_{k}\\right)}$"
+       "$\\displaystyle \\left[\\begin{matrix}\\left(- \\frac{D_{k} \\left(D_{k} p_{3|k} + p_{2|k} r_{k}\\right) + q_{1} + r_{k} \\left(D_{k} p_{2|k} + p_{1|k} r_{k}\\right)}{D_{k} \\left(D_{k} p_{3|k} + p_{2|k} r_{k}\\right) + n + q_{1} + r_{k} \\left(D_{k} p_{2|k} + p_{1|k} r_{k}\\right)} + 1\\right) \\left(D_{k} \\left(D_{k} p_{3|k} + p_{2|k} r_{k}\\right) + q_{1} + r_{k} \\left(D_{k} p_{2|k} + p_{1|k} r_{k}\\right)\\right) & \\left(D_{k} p_{3|k} + p_{2|k} r_{k}\\right) \\left(- \\frac{D_{k} \\left(D_{k} p_{3|k} + p_{2|k} r_{k}\\right) + q_{1} + r_{k} \\left(D_{k} p_{2|k} + p_{1|k} r_{k}\\right)}{D_{k} \\left(D_{k} p_{3|k} + p_{2|k} r_{k}\\right) + n + q_{1} + r_{k} \\left(D_{k} p_{2|k} + p_{1|k} r_{k}\\right)} + 1\\right)\\\\D_{k} p_{3|k} + p_{2|k} r_{k} - \\frac{\\left(D_{k} p_{3|k} + p_{2|k} r_{k}\\right) \\left(D_{k} \\left(D_{k} p_{3|k} + p_{2|k} r_{k}\\right) + q_{1} + r_{k} \\left(D_{k} p_{2|k} + p_{1|k} r_{k}\\right)\\right)}{D_{k} \\left(D_{k} p_{3|k} + p_{2|k} r_{k}\\right) + n + q_{1} + r_{k} \\left(D_{k} p_{2|k} + p_{1|k} r_{k}\\right)} & p_{3|k} + q_{3} - \\frac{\\left(D_{k} p_{3|k} + p_{2|k} r_{k}\\right)^{2}}{D_{k} \\left(D_{k} p_{3|k} + p_{2|k} r_{k}\\right) + n + q_{1} + r_{k} \\left(D_{k} p_{2|k} + p_{1|k} r_{k}\\right)}\\end{matrix}\\right]$"
       ],
       "text/plain": [
-       "p_{3|k} + q_3 - (D_{k}*p_{3|k} + p_{2|k}*r_{k})**2/(D_{k}*(D_{k}*p_{3|k} + p_{2|k}*r_{k}) + n + r_{k}*(D_{k}*p_{2|k} + p_{1|k}*r_{k}))"
+       "Matrix([\n",
+       "[(-(D_{k}*(D_{k}*p_{3|k} + p_{2|k}*r_{k}) + q_1 + r_{k}*(D_{k}*p_{2|k} + p_{1|k}*r_{k}))/(D_{k}*(D_{k}*p_{3|k} + p_{2|k}*r_{k}) + n + q_1 + r_{k}*(D_{k}*p_{2|k} + p_{1|k}*r_{k})) + 1)*(D_{k}*(D_{k}*p_{3|k} + p_{2|k}*r_{k}) + q_1 + r_{k}*(D_{k}*p_{2|k} + p_{1|k}*r_{k})), (D_{k}*p_{3|k} + p_{2|k}*r_{k})*(-(D_{k}*(D_{k}*p_{3|k} + p_{2|k}*r_{k}) + q_1 + r_{k}*(D_{k}*p_{2|k} + p_{1|k}*r_{k}))/(D_{k}*(D_{k}*p_{3|k} + p_{2|k}*r_{k}) + n + q_1 + r_{k}*(D_{k}*p_{2|k} + p_{1|k}*r_{k})) + 1)],\n",
+       "[                             D_{k}*p_{3|k} + p_{2|k}*r_{k} - (D_{k}*p_{3|k} + p_{2|k}*r_{k})*(D_{k}*(D_{k}*p_{3|k} + p_{2|k}*r_{k}) + q_1 + r_{k}*(D_{k}*p_{2|k} + p_{1|k}*r_{k}))/(D_{k}*(D_{k}*p_{3|k} + p_{2|k}*r_{k}) + n + q_1 + r_{k}*(D_{k}*p_{2|k} + p_{1|k}*r_{k})),                                                                           p_{3|k} + q_3 - (D_{k}*p_{3|k} + p_{2|k}*r_{k})**2/(D_{k}*(D_{k}*p_{3|k} + p_{2|k}*r_{k}) + n + q_1 + r_{k}*(D_{k}*p_{2|k} + p_{1|k}*r_{k}))]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "_P[1, 1]"
+    "_P"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +90,7 @@
        "[                                                      D_{k}*p_{3|k} + p_{2|k}*r_{k},                 p_{3|k} + q_3]])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,27 +101,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}\\frac{D_{k} \\left(D_{k} p_{3|k} + p_{2|k} r_{k}\\right) + q_{1} + r_{k} \\left(D_{k} p_{2|k} + p_{1|k} r_{k}\\right)}{D_{k} \\left(D_{k} p_{3|k} + p_{2|k} r_{k}\\right) + n + q_{1} + r_{k} \\left(D_{k} p_{2|k} + p_{1|k} r_{k}\\right)}\\\\\\frac{D_{k} p_{3|k} + p_{2|k} r_{k}}{D_{k} \\left(D_{k} p_{3|k} + p_{2|k} r_{k}\\right) + n + q_{1} + r_{k} \\left(D_{k} p_{2|k} + p_{1|k} r_{k}\\right)}\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}D_{k} r_{k} + \\frac{\\left(- D_{k} r_{k} + z\\right) \\left(D_{k} \\left(D_{k} p_{3|k} + p_{2|k} r_{k}\\right) + q_{1} + r_{k} \\left(D_{k} p_{2|k} + p_{1|k} r_{k}\\right)\\right)}{D_{k} \\left(D_{k} p_{3|k} + p_{2|k} r_{k}\\right) + n + q_{1} + r_{k} \\left(D_{k} p_{2|k} + p_{1|k} r_{k}\\right)} & r_{k} + \\frac{\\left(D_{k} p_{3|k} + p_{2|k} r_{k}\\right) \\left(- D_{k} r_{k} + z\\right)}{D_{k} \\left(D_{k} p_{3|k} + p_{2|k} r_{k}\\right) + n + q_{1} + r_{k} \\left(D_{k} p_{2|k} + p_{1|k} r_{k}\\right)}\\end{matrix}\\right]$"
       ],
       "text/plain": [
-       "Matrix([\n",
-       "[(D_{k}*(D_{k}*p_{3|k} + p_{2|k}*r_{k}) + q_1 + r_{k}*(D_{k}*p_{2|k} + p_{1|k}*r_{k}))/(D_{k}*(D_{k}*p_{3|k} + p_{2|k}*r_{k}) + n + q_1 + r_{k}*(D_{k}*p_{2|k} + p_{1|k}*r_{k}))],\n",
-       "[                                                      (D_{k}*p_{3|k} + p_{2|k}*r_{k})/(D_{k}*(D_{k}*p_{3|k} + p_{2|k}*r_{k}) + n + q_1 + r_{k}*(D_{k}*p_{2|k} + p_{1|k}*r_{k}))]])"
+       "Matrix([[D_{k}*r_{k} + (-D_{k}*r_{k} + z)*(D_{k}*(D_{k}*p_{3|k} + p_{2|k}*r_{k}) + q_1 + r_{k}*(D_{k}*p_{2|k} + p_{1|k}*r_{k}))/(D_{k}*(D_{k}*p_{3|k} + p_{2|k}*r_{k}) + n + q_1 + r_{k}*(D_{k}*p_{2|k} + p_{1|k}*r_{k})), r_{k} + (D_{k}*p_{3|k} + p_{2|k}*r_{k})*(-D_{k}*r_{k} + z)/(D_{k}*(D_{k}*p_{3|k} + p_{2|k}*r_{k}) + n + q_1 + r_{k}*(D_{k}*p_{2|k} + p_{1|k}*r_{k}))]])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "K"
+    "_X"
    ]
   },
   {
